# Formal_Languages_Prac

./: CMakeLists.txt  README.md  main.cpp
include/: earley.h  grammar.h
src/: CMakeLists.txt  earley.cpp  grammar.cpp
tests/: CMakeLists.txt  abc_grammar.txt  correct_bracket_sequences_grammar.txt  sum_multi_grammar.txt  unit_tests.cpp
